--- a/ARcowabungaproject/res/layout/tab_pizzas.xml
+++ b/ARcowabungaproject/res/layout/tab_pizzas.xml
@@ -14,18 +14,18 @@
         android:contentDescription="@string/content_description_img"
         android:scaleType="fitXY"
         android:src="@drawable/icontabpizzas"
-        android:tag="pizza_image" />
+        android:tag="pizza_image"  />
 
     <TextView
         android:id="@id/tabTittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/tabImg"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="20dp"
+        android:layout_marginRight="24dp"
         android:text="@string/tab_pizza"
         android:textColor="@android:color/white"
-        android:textSize="15sp"
+        android:textSize="25sp"
         android:layout_marginLeft="5dp" />
 
 </RelativeLayout>
