--- a/ARcowabungaproject/res/layout/expanded_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/expanded_pizza_layout.xml
@@ -63,6 +63,7 @@
             android:src="@drawable/home_image" />
 
         <TextView
+            android:id="@+id/textButtonInPizzaSubItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/third_D_view" />
