--- a/ARcowabungaproject/res/layout/listitem_order_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_order_layout.xml
@@ -75,14 +75,12 @@
         android:id="@id/cursorTextInOrderItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/separatorBottom"
+        android:layout_alignBaseline="@id/descTextInOrderItem"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/dateTextInOrderItem"
         android:layout_marginBottom="13dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:background="#33FF33"
-        android:paddingTop="5dp"
         android:text="@string/cursor"
         android:textColor="#e73445" >
     </TextView>
