--- a/ARcowabungaproject/res/layout/tab_offers.xml
+++ b/ARcowabungaproject/res/layout/tab_offers.xml
@@ -7,12 +7,12 @@
 
     <ImageView
         android:id="@+id/tabImg"
-        android:layout_width="40dp"
-        android:layout_height="35dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_centerVertical="true" 
         android:layout_toLeftOf="@+id/tabTittle"
         android:contentDescription="@string/content_description_img"
-        android:scaleType="fitCenter"
+        android:scaleType="fitXY"
         android:src="@drawable/icontaboffers"
         android:tag="offers_image"  />
 
@@ -22,10 +22,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="25dp"
+        android:layout_marginRight="20dp"
         android:text="@string/tab_offers"
         android:textColor="@android:color/white"
-        android:textSize="25sp"
+        android:textSize="23sp"
         android:layout_marginLeft="5dp" />
 
 </RelativeLayout>
