--- a/ARcowabungaproject/res/layout/pizza_list_layout.xml
+++ b/ARcowabungaproject/res/layout/pizza_list_layout.xml
@@ -36,11 +36,11 @@
         android:layout_height="wrap_content"
         android:text="@string/or_choose" />
 
-    <ListView
+    <ExpandableListView
         android:id="@+id/pizzaList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" >
-    </ListView>
+    </ExpandableListView>
 
 </LinearLayout>
