--- a/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
@@ -83,7 +83,7 @@
         android:layout_height="25dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/home_image"
+        android:background="@drawable/iconorderlist"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:contentDescription="" />
