--- a/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_pizza_layout.xml
@@ -36,23 +36,24 @@
         android:layout_toLeftOf="@+id/priceTextInItem"
         android:layout_toRightOf="@id/imageInItem"
         android:background="#335533"
+        android:text="titol"
         android:textColor="#E63444"
-        android:text="titol" >
+        android:textSize="18sp" >
     </TextView>
 
     <TextView
         android:id="@id/priceTextInItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/separatorRight"
         android:layout_below="@id/separatorTop"
         android:layout_marginBottom="2dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="13dp"
-        android:background="#FF3333"
+        android:layout_toLeftOf="@+id/separatorRight"
+        android:background="#222333"
+        android:text="preu"
         android:textColor="#E63444"
-        android:text="preu">
-    </TextView>
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/descTextInItem"
@@ -64,17 +65,18 @@
         android:layout_marginRight="5dp"
         android:layout_toLeftOf="@id/separatorRight"
         android:layout_toRightOf="@id/imageInItem"
-        android:background="#33FF33" 
-        android:text="desc">
+        android:background="#33FF33"
+        android:text="desc"
+        android:textSize="10sp" >
     </TextView>
 
     <View
         android:id="@id/separatorRight"
         android:layout_width="1dp"
         android:layout_height="match_parent"
-        android:layout_toLeftOf="@+id/imageButtonInItem"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_toLeftOf="@+id/imageButtonInItem"
         android:background="@android:color/darker_gray" />
 
     <ImageButton
@@ -83,9 +85,9 @@
         android:layout_height="25dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/iconorderlist"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:background="@drawable/iconorderlist"
         android:contentDescription="" />
 
     <View
