--- a/ARcowabungaproject/res/layout/pizza_list_layout.xml
+++ b/ARcowabungaproject/res/layout/pizza_list_layout.xml
@@ -40,7 +40,8 @@
         android:id="@+id/pizzaList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" >
+        android:layout_weight="1"
+        android:groupIndicator="@android:color/transparent">
     </ExpandableListView>
 
 </LinearLayout>
