--- a/ARcowabungaproject/res/layout/activity_menu.xml
+++ b/ARcowabungaproject/res/layout/activity_menu.xml
@@ -7,7 +7,7 @@
     <TabHost
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1" >
 
         <LinearLayout
@@ -42,7 +42,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:background="#EE4052"
         android:baselineAligned="false"
         android:clickable="true"
@@ -53,14 +53,14 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:paddingLeft="20dp" >
+            android:paddingLeft="20dp"
+            android:gravity="center" >
 
             <ImageView
                 android:id="@+id/buton_menu_img"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="5dp"
                 android:contentDescription="@string/menu"
                 android:src="@drawable/iconmenulist" />
 
@@ -71,7 +71,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
                 android:text="@string/menu"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -79,14 +80,14 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:paddingLeft="20dp" >
+            android:paddingLeft="20dp"
+            android:gravity="center" >
 
             <ImageView
                 android:id="@+id/buton_cart_img"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="5dp"
                 android:contentDescription="@string/menu"
                 android:src="@drawable/iconactualorder" />
 
@@ -97,7 +98,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
                 android:text="@string/shipping_begin_value"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
 
