--- a/ARcowabungaproject/res/layout/shooping_cart_layout.xml
+++ b/ARcowabungaproject/res/layout/shooping_cart_layout.xml
@@ -50,29 +50,30 @@
      </ListView>
     
    <!-- BUTTONS -->
-   <LinearLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="42dp"
         android:background="#EE4052"
+        android:baselineAligned="false"
         android:clickable="true"
-        android:orientation="horizontal"
-        android:baselineAligned="false" >
+        android:orientation="horizontal" >
 
         <LinearLayout
             android:id="@+id/button_menu"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:paddingLeft="20dp" >
+            android:paddingLeft="20dp"
+            android:gravity="center" >
 
             <ImageView
                 android:id="@+id/buton_menu_img"
-                android:layout_width="34dp"
-                android:layout_height="34dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="5dp"
                 android:contentDescription="@string/menu"
-                android:src="@drawable/ic_launcher" />
+                android:src="@drawable/iconmenulist" />
 
             <TextView
                 android:id="@+id/buton_menu_text"
@@ -81,24 +82,25 @@
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
                 android:text="@string/menu"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/button_cart"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:paddingLeft="20dp" >
+            android:paddingLeft="20dp"
+            android:gravity="center" >
 
             <ImageView
                 android:id="@+id/buton_cart_img"
-                android:layout_width="34dp"
-                android:layout_height="34dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="5dp"
-                android:contentDescription="@string/button_price"
-                android:src="@drawable/ic_launcher" />
+                android:contentDescription="@string/menu"
+                android:src="@drawable/iconactualorder" />
 
             <TextView
                 android:id="@+id/button_cart_text"
@@ -106,8 +108,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
-                android:text="@string/button_price"
-                android:textColor="@android:color/white" />
+                android:text="@string/shipping_begin_value"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
         </LinearLayout>
     </LinearLayout>
 
