--- a/ARcowabungaproject/res/layout/shooping_cart_layout.xml
+++ b/ARcowabungaproject/res/layout/shooping_cart_layout.xml
@@ -43,7 +43,7 @@
     </RelativeLayout>
 
      <ListView
-         android:id="@+id/pizzaList"
+         android:id="@+id/product_list"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1" >
