--- a/ARcowabungaproject/res/layout/activity_menu.xml
+++ b/ARcowabungaproject/res/layout/activity_menu.xml
@@ -31,13 +31,10 @@
                 android:id="@android:id/tabcontent"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent" >
-
-             
             </FrameLayout>
         </LinearLayout>
     </TabHost>
-    
-    
+
     <!-- BUTTONS -->
 
     <LinearLayout
@@ -53,8 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:paddingLeft="20dp"
-            android:gravity="center" >
+            android:gravity="center"
+            android:paddingLeft="20dp" >
 
             <ImageView
                 android:id="@+id/buton_menu_img"
@@ -75,13 +72,18 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
+        <View
+            android:layout_width="6dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/pompon_red" />
+
         <LinearLayout
             android:id="@+id/button_cart"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:paddingLeft="20dp"
-            android:gravity="center" >
+            android:gravity="center"
+            android:paddingLeft="20dp" >
 
             <ImageView
                 android:id="@+id/buton_cart_img"
