--- a/ARcowabungaproject/res/layout/listitem_drink_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_drink_layout.xml
@@ -25,12 +25,12 @@
         android:src="@drawable/home_image" />
        
        <TextView
-        android:id="@+id/titleTextInItem"
+        android:id="@+id/titleTextInDrinkItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginRight="5dp"
-        android:layout_toLeftOf="@+id/priceTextInItem"
+        android:layout_toLeftOf="@+id/priceTextInDrinkItem"
         android:layout_toRightOf="@id/imageInDrinkItem"
         android:background="#335533"
         android:text="titol"
@@ -39,7 +39,7 @@
     </TextView>
 
     <TextView
-        android:id="@id/priceTextInItem"
+        android:id="@id/priceTextInDrinkItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -56,11 +56,11 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
-        android:layout_toLeftOf="@+id/imageButtonInItem"
+        android:layout_toLeftOf="@+id/imageButtonInDrinkItem"
         android:background="@android:color/darker_gray" />
 
     <ImageButton
-        android:id="@id/imageButtonInItem"
+        android:id="@id/imageButtonInDrinkItem"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_alignParentRight="true"
