--- a/ARcowabungaproject/res/layout/offer_list_layout.xml
+++ b/ARcowabungaproject/res/layout/offer_list_layout.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <ListView
+   <ExpandableListView
         android:id="@+id/offerList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </ListView>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:groupIndicator="@android:color/transparent">
+    </ExpandableListView>
 
 </LinearLayout>
