Fix error on id's name in OfferSetAdapter.java

--- a/ARcowabungaproject/res/layout/listitem_offer_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_offer_layout.xml
@@ -55,7 +55,7 @@
         android:textSize="15sp" />
 
     <TextView
-        android:id="@+id/descTextInItem"
+        android:id="@+id/descTextInOfferItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/separatorBottom"
