--- a/ARcowabungaproject/res/layout/expanded_offer_layout.xml
+++ b/ARcowabungaproject/res/layout/expanded_offer_layout.xml
@@ -33,7 +33,7 @@
         android:layout_toRightOf="@id/imageInOfferSubItem"
         android:background="#335533"
         android:text="titol"
-        android:textColor="#E63444"
+        android:textColor="@color/red"
         android:textSize="18sp" >
     </TextView>
 
@@ -46,7 +46,7 @@
         android:layout_alignParentRight="true"
         android:background="#222333"
         android:text="preu"
-        android:textColor="#E63444"
+        android:textColor="@color/red"
         android:textSize="15sp" />
     
  	<View
