--- a/ARcowabungaproject/res/layout/activity_menu.xml
+++ b/ARcowabungaproject/res/layout/activity_menu.xml
@@ -40,7 +40,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="42dp"
-        android:background="#EE4052"
+        android:background="@color/red"
         android:baselineAligned="false"
         android:clickable="true"
         android:orientation="horizontal" >
