--- a/ARcowabungaproject/res/layout/expanded_pizza_layout.xml
+++ b/ARcowabungaproject/res/layout/expanded_pizza_layout.xml
@@ -48,7 +48,7 @@
         android:layout_toRightOf="@id/imageInPizzaSubItem"
         android:layout_above="@+id/separatorBottom"
         android:orientation="horizontal"
-        android:background="#e73445" 
+        android:background="@color/red" 
         android:layout_marginBottom="18dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
@@ -66,7 +66,8 @@
             android:id="@+id/textButtonInPizzaSubItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/third_D_view" />
+            android:text="@string/third_D_view"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <View
