--- a/ARcowabungaproject/res/layout/listitem_offer_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_offer_layout.xml
@@ -36,7 +36,7 @@
         android:layout_toRightOf="@id/imageInOfferItem"
         android:background="#335533"
         android:text="titol"
-        android:textColor="#E63444"
+        android:textColor="@color/red"
         android:textSize="18sp" >
     </TextView>
 
@@ -51,7 +51,7 @@
         android:layout_toLeftOf="@+id/separatorRight"
         android:background="#222333"
         android:text="preu"
-        android:textColor="#E63444"
+        android:textColor="@color/red"
         android:textSize="15sp" />
 
     <TextView
