--- a/ARcowabungaproject/res/layout/listitem_product_final_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_product_final_layout.xml
@@ -8,7 +8,7 @@
         android:id="@+id/blue_subtotal_layout"
         android:layout_width="match_parent"
         android:layout_height="30dp"
-     	android:background="#01DFD7"  
+     	android:background="@color/light_cyan"  
     >
     	<TextView 
     	    android:layout_width="wrap_content"
@@ -85,7 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="20dp"
-        android:background="#FF3333" />
+        android:background="@color/red" />
 
     <TextView
         android:layout_below="@id/separator_total_bottom"
