--- a/ARcowabungaproject/res/layout/listitem_product_intro_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_product_intro_layout.xml
@@ -30,6 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
-        android:background="#FF3333" />
+        android:background="@color/red" />
 
 </LinearLayout>
