--- a/ARcowabungaproject/res/layout/pizza_list_intro_layout.xml
+++ b/ARcowabungaproject/res/layout/pizza_list_intro_layout.xml
@@ -13,6 +13,7 @@
         android:padding="10dp" >
 
         <TextView
+            android:id="@+id/makeYourPizza_tittle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" 
             android:text="@string/create_your_own_pizza"
@@ -20,6 +21,7 @@
             android:textColor="@android:color/white"/>
 
         <TextView
+            android:id="@+id/makeYourPizza_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" 
             android:text="@string/create_your_own_pizza_desc"
@@ -32,6 +34,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/makeYourPizza_description_second"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/or_choose" />
