--- a/ARcowabungaproject/res/layout/activity_contact.xml
+++ b/ARcowabungaproject/res/layout/activity_contact.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="4"
+        android:gravity="center"
         android:orientation="vertical" >
 
         <ImageView
@@ -16,14 +18,48 @@
             android:src="@drawable/home_image" />
 
         <TextView
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:text="@string/about_us_tittle" />
-
-        <TextView
-            android:layout_width="170dp"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:text="@string/about_us" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.8"
+        android:gravity="center" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="holakease"
+            android:drawableTop="@drawable/ic_launcher"
+            android:layout_margin="5dp"
+            android:textColor="@color/red" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="holakease"
+            android:drawableTop="@drawable/ic_launcher"
+            android:layout_margin="5dp"
+            android:textColor="@color/red" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="holakease"
+            android:drawableTop="@drawable/ic_launcher"
+            android:layout_margin="5dp"
+            android:textColor="@color/red" />
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="holakease"
+            android:drawableTop="@drawable/ic_launcher"
+            android:layout_margin="5dp"
+            android:textColor="@color/red" />
     </LinearLayout>
 
     <LinearLayout
@@ -37,23 +73,55 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TELEFONO: 324234234" />
+            android:text="TELEFONO: 324234234"
+            android:textColor="@android:color/white"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="5dp" />
+        
+        <View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/white"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="DIRECCION: 324234234" />
+            android:text="DIRECCION: 324234234"
+            android:textColor="@android:color/white"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="2dp" />
+        
+        <View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/white"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="E-MAIL: 324234234" />
+            android:text="E-MAIL: 324234234"
+            android:textColor="@android:color/white"
+            android:layout_marginLeft="20dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="2dp" />
+        
+        <View 
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/white"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"/>
+        
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="40dp"
         android:background="#EE4052"
         android:gravity="center" >
 
