Fix code error in colors.xml

--- a/ARcowabungaproject/res/values/colors.xml
+++ b/ARcowabungaproject/res/values/colors.xml
@@ -7,7 +7,7 @@
     <item name="dark_red_100" type="color">#ad2334</item>
     <item name="dark_red_200" type="color">#8d1f2a</item>
     <item name="dark_red_300" type="color">#711b23</item>
-    <item name="dark_red_400" type="color">##5a1b22</item>
+    <item name="dark_red_400" type="color">#5a1b22</item>
  
 
  
