--- a/ARcowabungaproject/res/layout/listitem_order_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_order_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="60dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp" >
 
@@ -13,7 +13,7 @@
         android:layout_alignParentTop="true"
         android:background="@android:color/darker_gray" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageInOrderItem"
         android:layout_width="25dp"
         android:layout_height="25dp"
