--- a/ARcowabungaproject/res/layout/order_list_layout.xml
+++ b/ARcowabungaproject/res/layout/order_list_layout.xml
@@ -12,4 +12,74 @@
         android:groupIndicator="@android:color/transparent" >
     </ExpandableListView>
 
+     <!-- BUTTONS -->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:background="@color/red"
+        android:baselineAligned="false"
+        android:clickable="true"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:id="@+id/button_menu"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingLeft="20dp" >
+
+            <ImageView
+                android:id="@+id/button_menu_img"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/menu"
+                android:src="@drawable/iconmenulist" />
+
+            <TextView
+                android:id="@+id/button_menu_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:text="@string/menu"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="6dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/pompon_red" />
+
+        <LinearLayout
+            android:id="@+id/button_cart"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:paddingLeft="20dp" >
+
+            <ImageView
+                android:id="@+id/button_cart_img"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_gravity="center_vertical"
+                android:contentDescription="@string/menu"
+                android:src="@drawable/iconactualorder" />
+
+            <TextView
+                android:id="@+id/button_cart_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:text="@string/shipping_begin_value"
+                android:textColor="@android:color/white"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </LinearLayout>
+    
 </LinearLayout>
